@@ -2,12 +2,14 @@ package ru.yandex.practicum.filmorate.storage;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.User;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -21,7 +23,8 @@ public class InMemoryUserStorage implements UserStorage {
             return Optional.empty();
         }
 
-        userStorage.put(++index, user);
+        user.setId(++index);
+        userStorage.put(user.getId(), user);
 
         return Optional.of(user);
     }
@@ -30,7 +33,7 @@ public class InMemoryUserStorage implements UserStorage {
     public List<User> getAll() {
         return userStorage.values()
                 .stream()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -61,5 +64,13 @@ public class InMemoryUserStorage implements UserStorage {
         if (userStorage.containsKey(id)) {
             userStorage.remove(id);
         }
+    }
+
+    @Override
+    public Optional<User> getById(Long id) {
+        if (userStorage.containsKey(id)) {
+            return Optional.of(userStorage.get(id));
+        }
+        return Optional.empty();
     }
 }
